--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,9 +11,12 @@
   <body>
     <div class="todo-container">
       <h1>To-Do List</h1>
-      <h2>Login:</h2>
-      <form action="/api/auth" method="post">
+      <h2>Register:</h2>
+      <form action="/api/users" method="post">
         <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" name="name" />
+          <div class="form-group">
           <label>Email</label>
           <input type="text" class="form-control" name="email" />
         </div>
@@ -21,10 +24,8 @@
           <label>Password</label>
           <input type="password" class="form-control" name="password" />
         </div>
-
-        <button type="submit" class="btn btn-warning btn-lg">Login</button>
+        <button type="submit" class="btn btn-warning btn-lg">Send</button>
       </form>
-      <p>Don`t have an account? <a href="/api/users/register">Register</a></p>
     </div>
   </body>
 </html>
