--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,6 +34,7 @@
         <div class="form-group form-btn">
           <button type="submit" class="btn btn-warning btn-lg">Send</button>
         </div>
+        <p>Already have an account? <a href="/">Login</a></p>
       </form>
     </div>
   </body>
